// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadLink renders a downloadable link 1`] = `
<a
  download={true}
  href="/path/to/click.me"
  referrerPolicy="origin"
>
  Click Me
</a>
`;

exports[`DownloadLink renders with a custom component 1`] = `
<TestComponent
  download={true}
  href="/path/to/click.me"
  pass="through"
  referrerPolicy="origin"
>
  Click Me 2
</TestComponent>
`;
